--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 body {
     background-color: #ffffff;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding: 5px 10px;
-    margin: 25px;
+    padding: 5px 25px;
+    margin: 15px;
     cursor: pointer;
 }
 .header {
@@ -15,11 +15,41 @@ body {
     border: 1px solid white;
     
 }
+
 a{
     text-decoration: none;
     color: grey;
     padding: 20px;
     font-weight: lighter;
+}
+.l_button {
+    width: 73px;
+    height: 38px;
+    font-weight: bold;
+    background-color: #ffffff;
+    position: relative;
+    top: 7px;
+    margin-right: 3px;
+    
+    
+}
+.s_button {
+    width: 73px;
+    height: 38px;
+    font-weight: bold;
+    background-color: #ffffff;
+    position: relative;
+    top: 7px;
+}
+
+.d_button {
+   width: 43px;
+   height: 43px;
+   background-color: #ffffff;
+   position: relative;
+   top: 2px;
+   margin-left: 5px;
+   
 }
 a:hover{
     color: indigo;
@@ -46,7 +76,8 @@ input {
     top: 2px;
  }
 .section_1 img {
-padding: 2px 100px;
+    padding: 2px 100px;
+    margin-top: 2px;
 }
 .container-1 {
     border: 1px solid #ffff;
@@ -68,7 +99,7 @@ padding: 2px 100px;
     bottom: 160px;
 }
 .container_2 h2 {
-            font-size: 40px;
+            font-size: 35px;
             margin-left: 30px;
             position: relative;
             bottom: 45px;
@@ -77,19 +108,18 @@ padding: 2px 100px;
     font-size: 25px;
     position: relative;
     bottom: 60px;
-    left: 35px;
+    left: 38px;
 }
 .container_3 {
     display: flex;
     position: relative;
-    bottom: 230px;
-    left: 135px;
-    font-weight: 30px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size:20px;
-
-
+    bottom: 240px;
+    left: 145px;
+    font-weight:bold;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size:15px;
 }
+
 .container_3 a:hover {
     color: black;
 }
@@ -105,38 +135,157 @@ padding: 2px 100px;
 .container_5 {
     display: flex;
 }
+.fig1 {
+    position: relative;
+    right:4%;
+}
+.fig2 {
+    position: relative;
+    right: 11%;
+    top: 10px;
+}
+.fig3 {
+    position: relative;
+    right: 18%;
+    top: 10px;
+}
+.fig4 {
+    position: relative;
+    right: 24%;
+}
+.fig5 {
+    position: relative;
+    right: 30%;
+}
 .section2 {
     border: 1px solid black;
-    margin: 30px;
-    padding: 35px;
+    padding: 30px;
+    position: relative;
+    bottom: 230px;
+    width: 83%;
+    height: 42%;
+    margin-left: 10%;
+    position: relative;
 }
+.container_5 h3 {
+    margin-top: 1px;
+}
+.fig2 p {
+    position: relative;
+    top: 15px;
+}
+.bestseller {
+    border: 1px solid #ffdb58;
+    width: 80px;
+    text-align: center;
+    font-weight: bold;
+    background-color: #ffdb58;
+}
+
 .section_6 {
    display: flex;
-   justify-content: space-between;
+    gap: 5px;
+    padding-bottom: 5px;
+    position: relative;
+    left: 10%;
 }
+.learn {
+ display: flex;
+ gap: 3%;
+position: relative;
+bottom: 160px;
+}
+.learn img {
+    position: relative;
+    top: 20px;
+    }
+.Students h2{
+   position: relative;
+   bottom: 160px;
+   left: 150px;
+}
+
 .container_7{
     display: flex;
+    position: relative;
+    bottom: 180px;
+}
+.dev {
+    position: relative;
+    left: 120px;
+}
+.python {
+    position: relative;
+    left: 45px;
+}
+.java {
+    position: relative;
+    right: 20px;
+}
+.react {
+    position: relative;
+    right: 90px;
+}
+.AWS {
+    position: relative;
+    right: 165px;
+}
+figcaption span{
+    color:#ae8b0c;
+    font-weight: bold;
+}
+figcaption p {
+    font-weight: bold;
+}
+
+.top h2 {
+    position: relative;
+    left: 5%;
+    bottom:170px;
 }
 .grid-container {
     display:flex;
+    position: relative;
+    bottom: 160px;
+}
+.Featured-topics h2 {
+    position: relative;
+    bottom: 150px;
+    left: 40px;
 }
 .Featured-topics a {
-    text-decoration:none;
+    text-decoration:underline;
     color: indigo;
     font-weight: bold;
 }
 ul {
     list-style: none;
+    font-weight: bold;
+}
+.flex-box p {
+    color: grey;
 }
 
 .flex-box {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    bottom: 140px;
+    background-color: beige;
 }
+.explore {
+    position: relative;
+    bottom: 120px;
+    left:40px;
+    height: 50px;
+    font-weight: bold;
+    background-color: #ffffff;
+}
+/*Current problem*/
 .instructor {
     display: flex;
     justify-content: center;
-    
+    gap: 10%;
 }
 .great-teams {
     text-align: center;
@@ -151,7 +300,7 @@ ul {
 }
 footer {
    
-    background-color: #101518;
+    background-color: black;
    }
    footer a {
     color: #ffff;
